--- a/aplicacao/contest/src/main/resources/templates/login.html
+++ b/aplicacao/contest/src/main/resources/templates/login.html
@@ -35,8 +35,8 @@
           <form name="loginForm" th:action="@{/login}" class="valign" method="post">
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
-            <div th:if="${param.error}" class="chip red darken-1">
-              <span class="white-text" th:text="${param.error}"></span>
+            <div th:if="${loginError}" class="chip red darken-1">
+              <span class="white-text" th:text="${loginError}"></span>
               <i class="material-icons">close</i>
             </div>
             <div th:if="${param.logout}" class="chip blue darken-1">
