Tela cadastrar evento funcionando

--- a/aplicacao/contest/src/main/resources/templates/administrador/admin_cadastrar.html
+++ b/aplicacao/contest/src/main/resources/templates/administrador/admin_cadastrar.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <nav role="navigation" class="purple darken-4">
-      <div class="nav-wrapper container"><a href="#"><img th:src="@{../static/img/logotipo_white.png}" alt="Contest" width="200px"/></a>
+      <div class="nav-wrapper container"><a href="#"><img th:src="@{/img/logotipo_white.png}" alt="Contest" width="200px"/></a>
         <ul class="white-text right hide-on-med-and-down">
           <li><a href="#">Link 01</a></li>
           <li><a href="#">Link 02</a></li>
