--- a/aplicacao/contest/src/main/resources/templates/evento/admin_cadastrar.html
+++ b/aplicacao/contest/src/main/resources/templates/evento/admin_cadastrar.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Constest - Controle de Eventos de Submissão</title>
     <!-- CSS  -->
   	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   	<link th:href="@{/webjars/materialize/0.97.6/dist/css/materialize.min.css}" type="text/css" rel="stylesheet" media="screen,projection" />
+  	<link th:href="@{/webjars/font-awesome/4.6.3/css/font-awesome.min.css}" type="text/css" rel="stylesheet" />
   	<link th:href="@{/css/style.css}" type="text/css" rel="stylesheet" media="screen,projection" />
   </head>
   <body>
     <nav role="navigation" class="purple darken-4">
-      <div class="nav-wrapper container"><a href="#"><img src="../imgs/logotipo_white.png" alt="Contest" width="200px"></a>
+      <div class="nav-wrapper container"><a href="#"><img th:src="@{/img/logotipo_white.png}" alt="Contest" width="200px"/></a>
         <ul class="white-text right hide-on-med-and-down">
           <li><a href="#">Link 01</a></li>
           <li><a href="#">Link 02</a></li>
@@ -22,24 +23,24 @@
         </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
     </nav>
-    <div class="container page"><br>
+    <div class="container page"><br/>
       <div class="row opcoes"><a href="admin_lista_ativos.html">Eventos Ativos</a><a href="admin_lista_inativos.html">Eventos Inativos</a><a href="admin_cadastrar.html">Adicionar Evento</a></div>
       <div class="row">
         <h2>Adicionar Evento</h2>
-        <form class="col s12">
+        <form class="col s12" action="#" th:action="@{/evento/adicionar}" th:object="${evento}" method="post">
           <div class="input-field col m6 s6">
-            <input id="nome_evento" type="text">
+            <input id="nome_evento" type="text" th:field="*{nome}"/>
             <label for="input_text">Nome do Evento</label>
           </div>
           <div class="input-field col m6 s6">
             <select id="pessoas_select" name="Pessoas">
-              <option value="" disabled selected>Selecione uma pessoa</option>
+              <option value="" disabled="disabled" selected="selected">Selecione uma pessoa</option>
               <option value="1">pessoa 1</option>
               <option value="2">pessoa 2</option>
             </select>
             <label for="pessoas_select">Organizador do Evento</label>
           </div>
-          <div class="input-field col s4"><a class="waves-effect waves-light btn white-text">Salvar Evento<i aria-hidden="true" class="fa fa-download left">   </i></a></div>
+          <div class="input-field col s4"><button type="submit" class="waves-effect waves-light btn white-text">Salvar Evento<i aria-hidden="true" class="fa fa-floppy-o left"></i></button></div>
         </form>
       </div>
     </div>
@@ -48,8 +49,8 @@
         <div class="container"><a href="http://www.npi.quixada.ufc.br" class="white-text">Desenvolvido por NPI - Núcleo de Práticas em Informática</a></div>
       </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="../js/materialize.js"></script>
+   	<script type="text/javascript" th:src="@{/webjars/jquery/2.2.4/dist/jquery.min.js}"></script>
+  	<script type="text/javascript" th:src="@{/webjars/materialize/0.97.6/dist/js/materialize.min.js}"></script>
     <script type="text/javascript">
       $(document).ready(function(){
         //Inicialização dos elementos no JS
