--- a/aplicacao/contest/src/main/resources/templates/evento/admin_lista_inativos.html
+++ b/aplicacao/contest/src/main/resources/templates/evento/admin_lista_inativos.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Constest - Controle de Eventos de Submissão</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <!-- CSS-->
-    <link media="screen,projection" rel="stylesheet" href="../css/materialize.min.css">
-    <link media="screen,projection" rel="stylesheet" href="../css/font-awesome.min.css">
-    <link media="screen,projection" rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <!-- CSS -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link th:href="@{/webjars/materialize/0.97.6/dist/css/materialize.min.css}" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link th:href="@{/css/style.css}" type="text/css" rel="stylesheet" media="screen,projection" />
   </head>
   <body>
     <nav role="navigation" class="purple darken-4">
-      <div class="nav-wrapper container"><a href="#"><img src="../imgs/logotipo_white.png" alt="Contest" width="200px"></a>
+      <div class="nav-wrapper container"><a href="#"><img th:src="@{/img/logotipo_white.png}" alt="Contest" width="200px"/></a>
         <ul class="white-text right hide-on-med-and-down">
           <li><a href="#">Link 01</a></li>
           <li><a href="#">Link 02</a></li>
@@ -23,46 +23,22 @@
         </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
     </nav>
-    <div class="container page"><br>
-      <div class="row opcoes"><a href="admin_lista_ativos.html">Eventos Ativos</a><a href="admin_lista_inativos.html">Eventos Inativos</a><a href="admin_cadastrar.html">Adicionar Evento</a></div>
-      <div class="row">
+    <div class="container page"><br/>
+      <div class="row opcoes"><a th:href="@{/evento/ativos}">Eventos Ativos</a><a th:href="@{/evento/inativos}">Eventos Inativos</a><a th:href="@{/evento/adicionar}">Adicionar Evento</a></div>
+      <div class="row" th:switch="${!#lists.isEmpty(eventosInativos)}">
         <h2>Lista de Eventos Inativos</h2>
-        <div class="col m6 s12">
+        <div th:case="${true}">
+      
+         <div th:each="participacaoEvento : ${eventosInativos}" class="col m6 s12">
           <div class="card">
-            <div class="card-content"><span class="card-title">Nome do Evento</span>
-              <p>Organizador: João da Silva Sauro</p>
-              <p>Visibilidade: Privado</p>
+            <div class="card-content"><span class="card-title" th:text="${participacaoEvento.evento.nome}">Nome do Evento</span>
+              <p th:text="|Organizador: ${participacaoEvento.pessoa.nome}|"></p>
+              <p th:text="|Visibilidade: ${participacaoEvento.evento.visibilidade.visibilidade}|"></p>
             </div>
-            <div class="card-action"><a href="#" class="btn white-text waves-effect waves-light">Ativar</a><a href="admin_cadastrar.html" class="btn white-text waves-effect waves-light orange">Editar  </a><a href="#modal" class="btn white-text waves-effect waves-light red confirmar modal-trigger">Excluir</a></div>
+            <div class="card-action"><a href="#" class="btn white-text waves-effect waves-light">Ativar</a><a th:href="@{/evento/adicionar}" class="btn white-text waves-effect waves-light orange">Editar  </a><a id="excluir" th:attr="idevento=${participacaoEvento.evento.id}" href="#modal" class="btn white-text waves-effect waves-light red confirmar modal-trigger excluirOnclick">Excluir</a></div>
           </div>
-        </div>
-        <div class="col m6 s12">
-          <div class="card">
-            <div class="card-content"><span class="card-title">Nome do Evento</span>
-              <p>Organizador: João da Silva Sauro</p>
-              <p>Visibilidade: Privado</p>
-            </div>
-            <div class="card-action"><a href="#" class="btn white-text waves-effect waves-light">Ativar</a><a href="admin_cadastrar.html" class="btn white-text waves-effect waves-light orange">Editar  </a><a href="#modal" class="btn white-text waves-effect waves-light red confirmar modal-trigger">Excluir</a></div>
-          </div>
-        </div>
-        <div class="col m6 s12">
-          <div class="card">
-            <div class="card-content"><span class="card-title">Nome do Evento</span>
-              <p>Organizador: João da Silva Sauro</p>
-              <p>Visibilidade: Privado</p>
-            </div>
-            <div class="card-action"><a href="#" class="btn white-text waves-effect waves-light">Ativar</a><a href="admin_cadastrar.html" class="btn white-text waves-effect waves-light orange">Editar  </a><a href="#modal" class="btn white-text waves-effect waves-light red confirmar modal-trigger">Excluir</a></div>
-          </div>
-        </div>
-        <div class="col m6 s12">
-          <div class="card">
-            <div class="card-content"><span class="card-title">Nome do Evento</span>
-              <p>Organizador: João da Silva Sauro</p>
-              <p>Visibilidade: Privado</p>
-            </div>
-            <div class="card-action"><a href="#" class="btn white-text waves-effect waves-light">Ativar</a><a href="admin_cadastrar.html" class="btn white-text waves-effect waves-light orange">Editar  </a><a href="#modal" class="btn white-text waves-effect waves-light red confirmar modal-trigger">Excluir</a></div>
-          </div>
-        </div>
+         </div>
+
                 <div class="center">
                   <ul class="pagination">
                     <li class="disabled"><a href="#"><i class="material-icons">chevron_left</i></a></li>
@@ -71,12 +47,13 @@
                     <li class="waves-effect"><a href="#"><i class="material-icons">chevron_right</i></a></li>
                   </ul>
                 </div>
+        </div>
         <div id="modal" class="modal">
           <div class="modal-content">
             <h4>Excluir Evento</h4>
             <p>Tem certeza que quer excluir esse evento?</p>
           </div>
-          <div class="modal-footer"><a href="#" class="modal-action modal-close waves-effect btn-flat">Confirmar</a><a href="#" class="modal-action modal-close waves-effect btn-flat">Fechar</a></div>
+          <div class="modal-footer"><a id="confirmarExclusao" href="#" class="modal-action modal-close waves-effect btn-flat">Confirmar</a><a href="#" class="modal-action modal-close waves-effect btn-flat">Fechar</a></div>
         </div>
       </div>
     </div>
@@ -85,8 +62,8 @@
         <div class="container"><a href="http://www.npi.quixada.ufc.br" class="white-text">Desenvolvido por NPI - Núcleo de Práticas em Informática</a></div>
       </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="../js/materialize.js"></script>
+    <script type="text/javascript" th:src="@{/webjars/jquery/2.2.4/dist/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/materialize/0.97.6/dist/js/materialize.min.js}"></script>
     <script type="text/javascript">
       $(document).ready(function(){
         //Inicialização dos elementos no JS
@@ -174,6 +151,11 @@
         
         //Inicialização do Modal excluir Evento
         $('.modal-trigger').leanModal();
+        
+        $('.excluirOnclick').click( function(){
+        	var idEvento = $(this).attr("idevento"); 
+        	$('#confirmarExclusao').attr("href","/evento/remover/"+idEvento);
+        });
         
       });
     </script>
