--- a/aplicacao/contest/src/main/resources/templates/evento/admin_lista_inativos.html
+++ b/aplicacao/contest/src/main/resources/templates/evento/admin_lista_inativos.html
@@ -27,15 +27,24 @@
       <div class="row opcoes"><a th:href="@{/evento/ativos}">Eventos Ativos</a><a th:href="@{/evento/inativos}">Eventos Inativos</a><a th:href="@{/evento/adicionar}">Adicionar Evento</a></div>
       <div class="row" th:switch="${!#lists.isEmpty(eventosInativos)}">
         <h2>Lista de Eventos Inativos</h2>
+         <div th:if="${sucesso}" class="chip blue darken-1">
+              <span class="white-text" th:text="#{EVENTO_INATIVO_EXCLUIDO_SUCESSO}"></span>
+              <i class="material-icons">close</i>
+         </div>
+         <div th:if="${erro}" class="chip red darken-1">
+              <span class="white-text" th:text="#{EVENTO_INATIVO_EXCLUIDO_ERRO}"></span>
+              <i class="material-icons">close</i>
+         </div>
+         		
         <div th:case="${true}">
       
-         <div th:each="participacaoEvento : ${eventosInativos}" class="col m6 s12">
+         <div th:each="participacaoEventoInativos : ${eventosInativos}" class="col m6 s12">
           <div class="card">
-            <div class="card-content"><span class="card-title" th:text="${participacaoEvento.evento.nome}">Nome do Evento</span>
-              <p th:text="|Organizador: ${participacaoEvento.pessoa.nome}|"></p>
-              <p th:text="|Visibilidade: ${participacaoEvento.evento.visibilidade.visibilidade}|"></p>
+            <div class="card-content"><span class="card-title" th:text="${participacaoEventoInativos.evento.nome}">Nome do Evento</span>
+              <p th:text="|Organizador: ${participacaoEventoInativos.pessoa.nome}|"></p>
+              <p th:text="|Visibilidade: ${participacaoEventoInativos.evento.visibilidade.visibilidade}|"></p>
             </div>
-            <div class="card-action"><a href="#" class="btn white-text waves-effect waves-light">Ativar</a><a th:href="@{/evento/adicionar}" class="btn white-text waves-effect waves-light orange">Editar  </a><a id="excluir" th:attr="idevento=${participacaoEvento.evento.id}" href="#modal" class="btn white-text waves-effect waves-light red confirmar modal-trigger excluirOnclick">Excluir</a></div>
+            <div class="card-action"><a href="#" class="btn white-text waves-effect waves-light">Ativar</a><a th:href="@{/evento/adicionar}" class="btn white-text waves-effect waves-light orange">Editar  </a><a id="excluir" th:attr="idevento=${participacaoEventoInativos.evento.id}" href="#modal" class="btn white-text waves-effect waves-light red confirmar modal-trigger excluirOnclick">Excluir</a></div>
           </div>
          </div>
 
