--- a/aplicacao/contest/src/main/resources/templates/evento/admin_lista_ativos.html
+++ b/aplicacao/contest/src/main/resources/templates/evento/admin_lista_ativos.html
@@ -25,44 +25,21 @@
     </nav>
     <div class="container page"><br/>
       <div class="row opcoes"><a th:href="@{/evento/ativos}">Eventos Ativos</a><a th:href="@{/evento/inativos}">Eventos Inativos</a><a th:href="@{/evento/adicionar}">Adicionar Evento</a></div>
-      <div class="row">
+      <div class="row" th:switch="${!#lists.isEmpty(eventosAtivos)}">
         <h2>Lista de Eventos Ativos</h2>
-        <div class="col m6 s12">
+        <div th:case="${true}">
+         
+         <div th:each="participacaoEventoAtivos : ${eventosAtivos}" class="col m6 s12">
           <div class="card">
-            <div class="card-content"><span class="card-title">Nome do Evento</span>
-              <p>Organizador: João da Silva Sauro</p>
-              <p>Visibilidade: Privado</p>
+            <div class="card-content"><span class="card-title" th:text="${participacaoEventoAtivos.evento.nome}" >Nome do Evento</span>
+              <p th:text="|Organizador: ${participacaoEventoAtivos.pessoa.nome}|"></p>
+              <p th:text="|Visibilidade: ${participacaoEventoAtivos.evento.visibilidade.visibilidade}|"></p>
             </div>
             <div class="card-action"><a href="#" class="btn white-text waves-effect waves-light blue-grey">Inativar</a></div>
           </div>
+         </div>
         </div>
-        <div class="col m6 s12">
-          <div class="card">
-            <div class="card-content"><span class="card-title">Nome do Evento</span>
-              <p>Organizador: João da Silva Sauro</p>
-              <p>Visibilidade: Privado</p>
-            </div>
-            <div class="card-action"><a href="#" class="btn white-text waves-effect waves-light blue-grey">Inativar</a></div>
-          </div>
-        </div>
-        <div class="col m6 s12">
-          <div class="card">
-            <div class="card-content"><span class="card-title">Nome do Evento</span>
-              <p>Organizador: João da Silva Sauro</p>
-              <p>Visibilidade: Privado</p>
-            </div>
-            <div class="card-action"><a href="#" class="btn white-text waves-effect waves-light blue-grey">Inativar</a></div>
-          </div>
-        </div>
-        <div class="col m6 s12">
-          <div class="card">
-            <div class="card-content"><span class="card-title">Nome do Evento</span>
-              <p>Organizador: João da Silva Sauro</p>
-              <p>Visibilidade: Privado</p>
-            </div>
-            <div class="card-action"><a href="#" class="btn white-text waves-effect waves-light blue-grey">Inativar</a></div>
-          </div>
-        </div>
+        
                 <div class="center">
                   <ul class="pagination">
                     <li class="disabled"><a href="#"><i class="material-icons">chevron_left</i></a></li>
