--- a/aplicacao/contest/src/main/resources/static/css/style.css
+++ b/aplicacao/contest/src/main/resources/static/css/style.css
@@ -12,6 +12,10 @@ h1, h2, h3 {
   margin-right: 20px;
 }
 
+.opcoes {
+	margin-top: 20px;
+}
+
 .opcoes a{
   margin-right: 20px;
 }
@@ -24,48 +28,52 @@ h1, h2, h3 {
 }
 
 /* label color */
-   .input-field label {
-     color: #000;
-   }
-   /* label focus color */
-   .input-field input[type=text]:focus + label {
-     color: #6a1b9a;
-   }
-   /* label underline focus color */
-   .input-field input[type=text]:focus {
-     border-bottom: 1px solid #6a1b9a;
-     box-shadow: 0 1px 0 0 #000;
-   }
-   /* valid color */
-   .input-field input[type=text].valid {
-     border-bottom: 1px solid #6a1b9a ;
-     box-shadow: 0 1px 0 0 #000;
-   }
-   /* invalid color */
-   .input-field input[type=text].invalid {
-     border-bottom: 1px solid #6a1b9a ;
-     box-shadow: 0 1px 0 0 #000;
-   }
-   /* label focus color */
-   .input-field input[type=password]:focus + label {
-     color: #6a1b9a;
-   }
-   /* label underline focus color */
-   .input-field input[type=password]:focus {
-     border-bottom: 1px solid #6a1b9a;
-     box-shadow: 0 1px 0 0 #000;
-   }
-   /* valid color */
-   .input-field input[type=password].valid {
-     border-bottom: 1px solid #6a1b9a ;
-     box-shadow: 0 1px 0 0 #000;
-   }
-   /* invalid color */
-   .input-field input[type=password].invalid {
-     border-bottom: 1px solid #6a1b9a ;
-     box-shadow: 0 1px 0 0 #000;
-   }
-   /* icon prefix focus color */
-   .input-field .prefix.active {
-     color:#6a1b9a ;
-   }
+.input-field label {
+  color: #000;
+}
+/* label focus color */
+.input-field input[type=text]:focus + label {
+  color: #6a1b9a;
+}
+/* label underline focus color */
+.input-field input[type=text]:focus {
+  border-bottom: 1px solid #6a1b9a;
+  box-shadow: 0 1px 0 0 #000;
+}
+/* valid color */
+.input-field input[type=text].valid {
+  border-bottom: 1px solid #6a1b9a ;
+  box-shadow: 0 1px 0 0 #000;
+}
+/* invalid color */
+.input-field input[type=text].invalid {
+  border-bottom: 1px solid #6a1b9a ;
+  box-shadow: 0 1px 0 0 #000;
+}
+/* label focus color */
+.input-field input[type=password]:focus + label {
+  color: #6a1b9a;
+}
+/* label underline focus color */
+.input-field input[type=password]:focus {
+  border-bottom: 1px solid #6a1b9a;
+  box-shadow: 0 1px 0 0 #000;
+}
+/* valid color */
+.input-field input[type=password].valid {
+  border-bottom: 1px solid #6a1b9a ;
+  box-shadow: 0 1px 0 0 #000;
+}
+/* invalid color */
+.input-field input[type=password].invalid {
+  border-bottom: 1px solid #6a1b9a ;
+  box-shadow: 0 1px 0 0 #000;
+}
+/* icon prefix focus color */
+.input-field .prefix.active {
+  color:#6a1b9a ;
+}
+
+.error_area .chip {
+	margin-right: 15px;
+}
