--- a/aplicacao/contest/src/main/resources/static/css/style.css
+++ b/aplicacao/contest/src/main/resources/static/css/style.css
@@ -13,13 +13,13 @@ h1, h2, h3 {
 }
 
 .opcoes {
-	margin-top: 20px;
+  margin-top: 20px;
 }
 
 .opcoes a {
   margin-right: 20px;
 }
-.opcoes a:hover, .opcoes a.ativo {
+.opcoes a:hover, .opcoes .ativo {
   border-bottom: 2px solid #6a1b9a;
 }
 
