Controlado editar feito mas sem testes

--- a/aplicacao/contest/src/main/resources/templates/evento/admin_cadastrar.html
+++ b/aplicacao/contest/src/main/resources/templates/evento/admin_cadastrar.html
@@ -41,6 +41,7 @@
       <h2 class="col s12">Adicionar Evento</h2>
     </div>
     <form class="row" action="#" th:action="@{/evento/adicionar}" th:object="${evento}" method="post">
+      <input type="hidden" th:field="*{id}" />
       <div class="error_area" th:if="${#fields.hasErrors('*')}">
         <div class="chip row red left" th:each="err : ${#fields.errors('*')}">
           <span class="white-text" th:text="${err}"></span>
@@ -53,11 +54,19 @@
       </div>
       <div class="input-field col m6 s6">
         <select id="pessoas_select" name="organizador">
-          <option value="" disabled="disabled" selected="selected">Selecione uma pessoa</option>
-          <option th:each="pessoa : ${pessoas}" th:value="${pessoa.id}" th:text="${pessoa.nome}"></option>
-        </select> <label for="pessoas_select">Organizador do Evento</label>
+          <option value="" disabled="disabled" selected="selected" >Selecione uma pessoa</option>
+          <div th:each="pessoa : ${pessoas}"  >
+            <option th:if="${pessoa.id == idPessoa}" th:value="${pessoa.id}" th:text="${pessoa.nome}" selected="selected"></option>
+            <option th:if="${pessoa.id != idPessoa}" th:value="${pessoa.id}" th:text="${pessoa.nome}" ></option>   
+          </div> 
+        </select> 
+        <label for="pessoas_select">Organizador do Evento</label>
       </div>
-      <div class="input-field col s4">
+      <div class="input-field col s12">
+        <textarea id="descricao" th:field="*{descricao}"  class="materialize-textarea" length="255" maxlength="255"></textarea> 
+        <label for="descricao">Descrição</label>
+      </div>
+      <div class="input-field col s12">
         <button type="submit" class="waves-effect waves-light btn white-text">
           Salvar Evento<i aria-hidden="true" class="fa fa-floppy-o left"></i>
         </button>
