--- a/aplicacao/contest/src/main/resources/templates/organizador/org_editar_eventos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_editar_eventos.html
@@ -5,14 +5,17 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Constest - Controle de Eventos de Submissão</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <!-- CSS -->
+    <!-- CSS-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link th:href="@{/webjars/materialize/0.97.6/dist/css/materialize.min.css}" type="text/css" rel="stylesheet" media="screen,projection" />
     <link th:href="@{/css/style.css}" type="text/css" rel="stylesheet" media="screen,projection" />
   </head>
   <body>
     <nav role="navigation" class="purple darken-4">
-      <div class="nav-wrapper container"><a href="#"><img th:src="@{/img/logotipo_white.png}" alt="Contest" width="200px"/></a>
+      <div class="nav-wrapper container">
+      <a href="#">
+       <img th:src="@{/img/logotipo_white.png}" alt="Contest" width="200px"/>
+      </a>
         <ul class="white-text right hide-on-med-and-down">
           <li><a href="#">Link 01</a></li>
           <li><a href="#">Link 02</a></li>
@@ -23,82 +26,68 @@
         </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
     </nav>
-    <div class="container page">
-      <div class="row opcoes">
-        <div class="col s12">
-          <a th:href="@{/evento/ativos}">Eventos Ativos</a>
-          <a class="ativo" th:href="@{/evento/inativos}">Eventos Inativos</a>
-          <a th:href="@{/evento/adicionar}">Adicionar Evento</a>
-        </div>
-      </div>
-
+    <div class="container page"><br/>
+      <div class="row opcoes"><a href="org_eventos_ativos.html">Eventos Ativos</a><a href="org_eventos_inativos.html">Eventos Inativos</a><a href="org_revisores.html">Revisores</a><a href="org_trilhas.html">Trilhas</a></div>
       <div class="row">
-      	<h2 class="col s12">Eventos Inativos</h2>
-      	
-      	<div th:if="${sucessoExcluir}" class="chip blue darken-1">
-          <span class="white-text" th:text="#{EVENTO_INATIVO_EXCLUIDO_SUCESSO}"></span>
-          <i class="material-icons">close</i>
-        </div>
-        
-        <div th:if="${sucessoCadastrar}" class="chip blue darken-1">
-          <span class="white-text" th:text="#{EVENTO_CADASTRADO_COM_SUCESSO}"></span>
-          <i class="material-icons">close</i>
-        </div>
-        
-        <div th:if="${sucessoEditar}" class="chip blue darken-1">
-          <span class="white-text" th:text="#{EVENTO_EDITADO_COM_SUCESSO}"></span>
-          <i class="material-icons">close</i>
-        </div>
-        
-        <div th:if="${erroExcluir}" class="chip red darken-1">
-          <span class="white-text" th:text="#{EVENTO_INATIVO_EXCLUIDO_ERRO}"></span>
-          <i class="material-icons">close</i>
-        </div>
-        
-      </div>
-
-      <div class="row" th:switch="${!#lists.isEmpty(eventosInativos)}">
-
-        <div th:case="${true}">
-      
-         <div th:each="participacaoEventoInativos : ${eventosInativos}" class="col m6 s12">
-          <div class="card">
-            <div class="card-content"><span class="card-title" th:text="${participacaoEventoInativos.evento.nome}"></span>
-              <p th:text="|Organizador: ${participacaoEventoInativos.pessoa.nome}|"></p>
-              <p th:text="|Visibilidade: ${participacaoEventoInativos.evento.visibilidade.visibilidade}|"></p>
-            </div>
-            <div class="card-action">
-              <a th:href="@{'/evento/editar/' + ${participacaoEventoInativos.evento.id}}" class="btn white-text waves-effect waves-light orange">Editar</a>
-              <a id="excluir" th:attr="id_evento=${participacaoEventoInativos.evento.id}, nome_evento=${participacaoEventoInativos.evento.nome}" href="#modal" class="btn white-text waves-effect waves-light red confirmar modal-trigger excluirOnclick">Excluir</a>
+        <h2>Editando Dados do Evento</h2>
+        <form class="col s12" th:action="@{/eventoOrganizador/ativar}" th:object="${evento}" method="post">
+          <div id="error_area" class="row chip red white-text">
+            "Mensagem de Erro"
+            <i class="material-icons">close</i>
+          </div>
+          <div class="row"> 
+          </div>
+          <input type="hidden" th:field="*{id}" />
+          <div class="input-field col m8 s12">
+            <input id="nome_evento" type="text" th:field="*{nome}" />
+          </div>
+          <div class="input-field col m4 s12">
+            <div class="switch" th:switch="*{visibilidade.visibilidade}">
+              <div th:case="'Privado'">
+                <label>
+                  Público
+                  <input checked="checked" type="checkbox"/>
+                  <span class="lever"></span>
+                  Privado
+                </label>
+              </div>
+              <div th:case="'Publico'">
+                <label>
+                  Público
+                  <input disabled="disabled" type="checkbox"/>
+                  <span class="lever"></span>
+                  Privado
+                </label>
+              </div>
             </div>
           </div>
-         </div>
-        </div>
-        
-        <div class="col m4 s12" th:case="${false}">
-          <p>Não há eventos inativos</p>
-        </div>
-        
-        <div class="center">
-          <ul class="pagination">
-            <li class="disabled"><a href="#"><i class="material-icons">chevron_left</i></a></li>
-            <li class="active"><a href="#">1</a></li>
-            <li class="waves-effect"><a href="#">2</a></li>
-            <li class="waves-effect"><a href="#"><i class="material-icons">chevron_right</i></a></li>
-          </ul>
-        </div>
-        
-        
-        <div id="modal" class="modal">
-          <div class="modal-content">
-            <h4>Excluir Evento</h4>
-            <h5 id="nomeEventoModal"></h5>
-            <p>Tem certeza que quer excluir esse evento?</p>
+          <div class="input-field col s12">
+            <textarea id="descricao_evento" class="materialize-textarea" th:field="*{descricao}"></textarea>
           </div>
-          <div class="modal-footer">
-          <a id="confirmarExclusao" href="#" class="modal-action modal-close waves-effect btn-flat">Confirmar</a>
-          <a href="#" class="modal-action modal-close waves-effect btn-flat">Cancelar</a></div>
-        </div>
+          <div class="row">
+                        <div class="col s3">
+                          <div class="card-content"><span class="card-title"> Prazo de Submissão - Inicial</span>
+                            <input type="date" id="prazo_submissao_inicial" class="datepicker"/>
+                          </div>
+                        </div>
+                        <div class="col s3">
+                          <div class="card-content"><span class="card-title"> Prazo de Submissão - Final</span>
+                            <input type="date" id="prazo_submissao_final" disabled="disabled" class="datepicker"/>
+                          </div>
+                        </div>
+                        <div class="col s3">
+                          <div class="card-content"><span class="card-title"> Prazo de Revisão - Inicial</span>
+                            <input type="date" id="prazo_revisao_inicial" disabled="disabled" class="datepicker"/>
+                          </div>
+                        </div>
+                        <div class="col s3">
+                          <div class="card-content"><span class="card-title"> Prazo de Revisão  - Final</span>
+                            <input type="date" id="prazo_revisao_final" disabled="disabled" class="datepicker"/>
+                          </div>
+                        </div>
+          </div>
+          <div class="row"><a class="waves-effect waves-light btn white-text">Salvar Detalhes e Ativar<i aria-hidden="true" class="fa fa-upload left"></i></a></div>
+        </form>
       </div>
     </div>
     <footer class="page-footer purple darken-4">
@@ -196,12 +185,6 @@
         //Inicialização do Modal excluir Evento
         $('.modal-trigger').leanModal();
         
-        $('.excluirOnclick').click( function(){
-        	var idEvento = $(this).attr("id_evento");
-        	var nomeEvento = $(this).attr("nome_evento");
-        	$('#confirmarExclusao').attr("href","/evento/remover/"+idEvento);
-        	$('#nomeEventoModal').text("O evento '" + nomeEvento + "' será excluído.");
-        });
       });
     </script>
   </body>
