1# Resolvido problema do teste.

--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
@@ -28,7 +28,7 @@
         <a th:href="@{/eventoOrganizador/ativos}">Eventos Ativos</a>
         <a th:href="@{/eventoOrganizador/inativos}">Eventos Inativos</a>
         <a href="org_revisores.html">Revisores</a>
-        <a href="org_trilhas.html">Trilhas</a>
+        <a th:href="@{/eventoOrganizador/trilhas}">Trilhas</a>
       </div>
       
       <div class="row">
